--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,19 @@
+@mixin mobile {
+  @media screen and (max-width: 480px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media screen and (max-width: 968px) {
+    @content;
+  }
+}
+@mixin laptop {
+  @media screen and (max-width: 1200px) {
+    @content;
+  }
+}
+
 .formContainer {
   background-color: #a7bcff;
   height: 100vh;
@@ -18,7 +34,6 @@
       color: #5d5b8d;
       font-weight: bold;
       font-size: 24px;
-
     }
 
     .title {
@@ -72,7 +87,7 @@
 }
 
 .home {
-  background-color: #a7bcff;
+  background-color: #08031f;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -81,10 +96,13 @@
   .container {
     // border: 1px solid white;
     border-radius: 10px;
-    width: 65%;
+    width: min(90%, 1200px);
     height: 80%;
     display: flex;
     overflow: hidden;
+    @include tablet {
+      width: 90%;
+    }
 
     .sidebar {
       flex: 1;
@@ -96,22 +114,39 @@
         align-items: center;
         background-color: #2f2d52;
         height: 50px;
-        padding: 10px;
+        padding: 12px;
         justify-content: space-between;
         color: #ddddf7;
 
         .logo {
           font-weight: bold;
+          @include tablet {
+            display: none;
+          }
         }
 
         .user {
+          width: 100%;
           display: flex;
+          align-items: center;
+          justify-content: space-between;
           gap: 10px;
+
+          .userNav {
+            display: flex;
+            flex-direction: column;
+            gap: .4rem;
+            div {
+              display: flex;
+              align-items: center;
+              gap: 0.5rem;
+            }
+          }
 
           img {
             background-color: #ddddf7;
-            height: 24px;
-            width: 24px;
+            height: 28px;
+            width: 28px;
             border-radius: 50%;
             object-fit: cover;
           }
@@ -119,14 +154,19 @@
           button {
             background-color: #5d5b8d;
             color: #ddddf7;
+            padding: 0.5rem 1rem;
             font-size: 10px;
             border: none;
             cursor: pointer;
+            @include tablet {
+              position: absolute;
+              bottom: 10px;
+            }
           }
         }
       }
       .search {
-        border-bottom: 1px solid gray;
+        border-bottom: 1px solid rgba(151, 151, 151, 0.25);
 
         .searchForm {
           padding: 10px;
@@ -185,7 +225,21 @@
         align-items: center;
         justify-content: space-between;
         padding: 10px;
-        color: lightgray;
+        font-size: 1.2rem;
+        font-weight: 600;
+        color: #f2f2f2;
+      }
+
+      .chatInfoHeader {
+        display: flex;
+        align-items: center;
+        gap: 0.6rem;
+        img {
+          width: 40px;
+          height: 40;
+          border-radius: 50%;
+          object-fit: cover;
+        }
       }
 
       .chatIcons {
