--- a/src/style.scss
+++ b/src/style.scss
@@ -236,7 +236,7 @@
         gap: 0.6rem;
         img {
           width: 40px;
-          height: 40;
+          height: 40px;
           border-radius: 50%;
           object-fit: cover;
         }
