--- a/src/style.scss
+++ b/src/style.scss
@@ -135,7 +135,7 @@
           .userNav {
             display: flex;
             flex-direction: column;
-            gap: .4rem;
+            gap: 0.4rem;
             div {
               display: flex;
               align-items: center;
@@ -255,12 +255,12 @@
       .messages {
         background-color: #ddddf7;
         padding: 10px;
-        height: calc(100% - 160px);
+        height: calc(100% - 180px);
         overflow-y: auto;
 
         .message {
           display: flex;
-          gap: 20px;
+          gap: 10px;
           margin-bottom: 20px;
 
           .messageInfo {
@@ -291,6 +291,7 @@
 
             img {
               width: 50%;
+              border-radius: 10px;
             }
           }
 
@@ -308,14 +309,19 @@
           }
         }
       }
-
+      .inputContainer {
+        min-height: max-content;
+        background-color: #cacaec;
+        padding: 1rem 0;
+      }
       .input {
-        height: 50px;
         background-color: white;
         padding: 10px;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin: 0 0.6rem;
+        border-radius: 40px;
 
         input {
           width: 100%;
@@ -325,6 +331,8 @@
           font-size: 18px;
 
           &::placeholder {
+            font-size: 16px;
+            padding-left: 1rem;
             color: lightgray;
           }
         }
@@ -340,11 +348,23 @@
           }
 
           button {
+            display: grid;
+            place-content: center;
             border: none;
-            padding: 10px 15px;
+            padding: 10px;
+            padding-left: 12px;
+            margin-left: 10px;
             color: white;
             background-color: #8da4f1;
+            font-size: 0.9rem;
+            border-radius: 50%;
             cursor: pointer;
+            svg {
+              width: 25px;
+              height: 25px;
+              vertical-align: middle;
+              fill: #fff;
+            }
           }
         }
       }
