--- a/src/style.scss
+++ b/src/style.scss
@@ -87,7 +87,7 @@
 }
 
 .home {
-  background-color: #08031f;
+  background-color: #020e0d;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -105,59 +105,63 @@
     }
 
     .sidebar {
+      max-width: 30%;
       flex: 1;
-      background-color: #3e3c61;
+      background-color: #111b21;
       position: relative;
 
       .navbar {
         display: flex;
         align-items: center;
-        background-color: #2f2d52;
-        height: 50px;
-        padding: 12px;
+        background-color: #0f5f5c;
+        padding: 15px 12px;
         justify-content: space-between;
         color: #ddddf7;
-
-        .logo {
-          font-weight: bold;
-          @include tablet {
-            display: none;
-          }
-        }
+        border-right: 1px solid #2a2a2a90;
 
         .user {
           width: 100%;
           display: flex;
-          align-items: center;
-          justify-content: space-between;
+          flex-direction: column;
           gap: 10px;
 
           .userNav {
             display: flex;
-            flex-direction: column;
-            gap: 0.4rem;
+            justify-content: space-between;
+            gap: 0.8rem;
             div {
               display: flex;
               align-items: center;
-              gap: 0.5rem;
+              gap: 0.7rem;
+              h2 {
+                font-size: 1.2rem;
+                color: #f2f2f2;
+              }
             }
           }
 
           img {
             background-color: #ddddf7;
-            height: 28px;
-            width: 28px;
+            height: 38px;
+            width: 38px;
             border-radius: 50%;
             object-fit: cover;
           }
 
           button {
-            background-color: #5d5b8d;
+            background-color: #148884;
             color: #ddddf7;
             padding: 0.5rem 1rem;
-            font-size: 10px;
+            font-size: 12px;
+            font-weight: 600;
+            border-radius: 6px;
             border: none;
             cursor: pointer;
+            transition: all 0.3s linear;
+            &:hover {
+              background-color: #1b2a33;
+              transition: all 0.3s linear;
+            }
             @include tablet {
               position: absolute;
               bottom: 10px;
@@ -193,7 +197,7 @@
         cursor: pointer;
 
         &:hover {
-          background-color: #2f2d52;
+          background-color: #0f5f5c;
         }
 
         img {
@@ -216,15 +220,16 @@
       }
     }
     .chat {
+      display: flex;
+      flex-direction: column;
       flex: 2;
 
       .chatInfo {
-        height: 50px;
-        background-color: #5d5b8d;
+        background-color: #0f5f5c;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 10px;
+        padding: 14px 12px;
         font-size: 1.2rem;
         font-weight: 600;
         color: #f2f2f2;
@@ -253,9 +258,9 @@
       }
 
       .messages {
-        background-color: #ddddf7;
+        background-color: #0d1419;
         padding: 10px;
-        height: calc(100% - 180px);
+        flex-grow: 1;
         overflow-y: auto;
 
         .message {
@@ -280,13 +285,25 @@
             max-width: 80%;
             display: flex;
             flex-direction: column;
+            align-items: flex-end;
             gap: 10px;
 
             p {
-              background-color: white;
-              padding: 10px 20px;
-              border-radius: 0px 10px 10px 10px;
+              display: flex;
+              gap: 0.6rem;
+              font-size: 15px;
+              font-weight: 500;
+              color: #f2f2f2;
+              background-color: #202c33;
+              padding: 10px 10px 6px 10px;
+              border-radius: 2px 10px 10px 10px;
               max-width: max-content;
+              span {
+                margin-top: 10px;
+                display: inline-flex;
+                font-size: 10px;
+                color: #828282b4;
+              }
             }
 
             img {
@@ -301,38 +318,45 @@
             .messageContent {
               align-items: flex-end;
               p {
-                background-color: #8da4f1;
+                background-color: #005c4b;
                 color: white;
                 border-radius: 10px 0px 10px 10px;
+                span {
+                  color: #dddddd;
+                }
               }
             }
           }
         }
       }
       .inputContainer {
-        min-height: max-content;
-        background-color: #cacaec;
-        padding: 1rem 0;
+        background-color: #202c33;
+        padding: 0.8rem 0;
       }
+
       .input {
-        background-color: white;
-        padding: 10px;
+        background-color: #2a3942;
+        padding: 6px;
         display: flex;
         align-items: center;
         justify-content: space-between;
         margin: 0 0.6rem;
         border-radius: 40px;
-
+        overflow: hidden;
+        
         input {
           width: 100%;
+          background-color: #2a3942;
           border: none;
           outline: none;
-          color: #2f2d52;
-          font-size: 18px;
+          color: white;
+          font-size: 16px;
+          padding-left: 1rem;
+          padding-bottom: 5px;
+          caret-color: white;
 
           &::placeholder {
             font-size: 16px;
-            padding-left: 1rem;
             color: lightgray;
           }
         }
@@ -340,10 +364,11 @@
         .send {
           display: flex;
           align-items: center;
-          gap: 10px;
+          gap: 5px;
 
           img {
-            height: 24px;
+            height: 28px;
+            padding-top: 5px;
             cursor: pointer;
           }
 
@@ -355,7 +380,7 @@
             padding-left: 12px;
             margin-left: 10px;
             color: white;
-            background-color: #8da4f1;
+            background-color: #148884;
             font-size: 0.9rem;
             border-radius: 50%;
             cursor: pointer;
