--- a/src/style.scss
+++ b/src/style.scss
@@ -97,6 +97,7 @@
 }
 
 .home {
+  width: 100%;
   background-color: #020e0d;
   height: 100vh;
   display: flex;
@@ -105,17 +106,13 @@
 
   .container {
     // border: 1px solid white;
-    border-radius: 10px;
-    width: min(90%, 1200px);
-    height: 80%;
+    width: min(100%, 1280px);
+    height: 100vh;
     display: flex;
     overflow: hidden;
-    @include tablet {
-      width: 90%;
-    }
 
     .sidebar {
-      max-width: 30%;
+      max-width: 40%;
       flex: 1;
       background-color: #111b21;
       position: relative;
@@ -124,7 +121,7 @@
         display: flex;
         align-items: center;
         background-color: #0f5f5c;
-        padding: 15px 12px;
+        padding: 7px 12px;
         justify-content: space-between;
         color: #ddddf7;
         border-right: 1px solid #2a2a2a90;
@@ -137,6 +134,7 @@
 
           .userNav {
             display: flex;
+            align-items: center;
             justify-content: space-between;
             gap: 0.8rem;
             div {
@@ -152,8 +150,8 @@
 
           img {
             background-color: #ddddf7;
-            height: 38px;
-            width: 38px;
+            height: 50px;
+            width: 50px;
             border-radius: 50%;
             object-fit: cover;
           }
@@ -215,12 +213,24 @@
           height: 50px;
           border-radius: 50%;
           object-fit: cover;
+          @include mobile {
+            width: 40px;
+            height: 40px;
+          }
         }
 
         .userChatInfo {
           span {
-            font-size: 18px;
+            display: inline-block;
             font-weight: 500;
+            font-size: 18px;
+            @include mobile {
+              max-width: 82px;
+              overflow: hidden;
+              white-space: nowrap;
+              text-overflow: ellipsis;
+              font-size: 15px;
+            }
           }
           p {
             font-size: 14px;
@@ -235,35 +245,53 @@
       flex: 2;
 
       .chatInfo {
-        background-color: #0f5f5c;
+        width: 100%;
+        box-sizing: border-box;
+        min-height: 64px;
+        max-height: 64px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 14px 12px;
+        padding: 11px 12px;
+        background-color: #0f5f5c;
         font-size: 1.2rem;
         font-weight: 600;
         color: #f2f2f2;
+        @include mobile {
+          font-size: 1.1rem;
+        }
       }
 
       .chatInfoHeader {
+        flex: 1;
         display: flex;
         align-items: center;
-        gap: 0.6rem;
+        gap: 0.8rem;
         img {
-          width: 40px;
-          height: 40px;
+          width: 50px;
+          height: 50px;
           border-radius: 50%;
           object-fit: cover;
+        }
+
+        @include mobile {
+          width: 40px;
+          height: 40px;
         }
       }
 
       .chatIcons {
         display: flex;
+        justify-content: flex-end;
+        flex: 1;
         gap: 10px;
 
         img {
           height: 24px;
           cursor: pointer;
+        }
+        @include mobile {
+          display: none;
         }
       }
 
@@ -289,30 +317,31 @@
               height: 40px;
               border-radius: 50%;
               object-fit: cover;
+              @include mobile {
+                display: none;
+              }
             }
           }
           .messageContent {
             max-width: 80%;
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
             gap: 10px;
 
             p {
               display: flex;
               gap: 0.6rem;
               font-size: 15px;
-              font-weight: 500;
               color: #f2f2f2;
               background-color: #202c33;
-              padding: 10px 10px 6px 10px;
+              padding: 7px 10px 6px 10px;
               border-radius: 2px 10px 10px 10px;
               max-width: max-content;
               span {
                 margin-top: 10px;
                 display: inline-flex;
                 font-size: 10px;
-                color: #828282b4;
+                color: #828282a3;
               }
             }
 
@@ -332,7 +361,7 @@
                 color: white;
                 border-radius: 10px 0px 10px 10px;
                 span {
-                  color: #dddddd;
+                  color: #ddddddd3;
                 }
               }
             }
@@ -353,7 +382,7 @@
         margin: 0 0.6rem;
         border-radius: 40px;
         overflow: hidden;
-        
+
         input {
           width: 100%;
           background-color: #2a3942;
